--- a/src/app/components/directives/agenda/filter/calendar.html
+++ b/src/app/components/directives/agenda/filter/calendar.html
@@ -1,6 +1,6 @@
 
     <!-- Filter Zone start-->
-    <div class="row valign-wrapper hide-on-small-only light-primary-color">
+    <div class="row valign-wrapper hide-on-small-only light-primary-color" id=step4>
         <!-- Periodicity selector -->
         <div class="col s4 center" >
             <a href="" ng-click="currentMonth()" class="btn3 waves-effect waves-white accent-color" translate="commons.periodicity.month"></a>
