--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1937,3 +1937,21 @@ span#top {
     background: rgba(0, 0, 0, 0.1);
 
 }
+
+/* introjs */
+.introjs-tooltip {
+    box-sizing: content-box;
+    position: absolute;
+    visibility: visible;
+    padding: 10px;
+    background-color: white;
+    min-width: 400px;
+    max-width: 350px;
+    border-radius: 3px;
+    box-shadow: 0 1px 10px rgba(0,0,0,.4);
+    -webkit-transition: opacity 0.1s ease-out;
+    -moz-transition: opacity 0.1s ease-out;
+    -ms-transition: opacity 0.1s ease-out;
+    -o-transition: opacity 0.1s ease-out;
+    transition: opacity 0.1s ease-out;
+}
