--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -11,14 +11,14 @@
     </div>
     <div class="row white pricing">
         
-        <div class="card col s12 m3">
+        <div class="card col s12 m6 l3">
             <div class="card-title default-primary-color center-align">
                 <i class="fa fa-fw fa-user fa-2x white-text" style="padding:2px;"></i>&nbsp;
                 <h5 translate="pricing.titleIndividualPlan"></h5>
             </div>
             <div class="card-title white dark-text-color" style="height:200px;">
                 <span class="light-text-color activator">{{'pricing.conditionIndividualPlan' | translate}}<i class="material-icons right">help</i></span>
-                <h3 translate="pricing.priceIndividualPlanM"></h3>
+                <h4 translate="pricing.priceIndividualPlanM"></h4>
                 <h5 class="right" translate="pricing.priceIndividualPlanA"></h5 >
             </div>
             <div class="card-reveal center-align">
@@ -39,14 +39,14 @@
             </div>
         </div>
         
-        <div class="card col s12 m3">
+        <div class="card col s12 m6 l3">
             <div class="card-title dark-primary-color center-align">
                 <i class="fa fa-fw fa-user-plus fa-2x white-text" style="padding:2px;"></i>&nbsp;
                 <h5 translate="pricing.titleClubSmallPlan"></h5>
             </div>
             <div class="card-title white dark-text-color" style="height:200px;">
                 <span class=" light-text-color activator">{{'pricing.conditionClubSmallPlan' | translate}}<i class="material-icons right">helpt</i></span>
-                <h3 translate="pricing.priceClubSmallPlanM"></h3>
+                <h4 translate="pricing.priceClubSmallPlanM"></h4>
                 <h5 class="right" translate="pricing.priceClubSmallPlanA"></h5>
             </div>
             <div class="card-reveal left-align">
@@ -54,26 +54,26 @@
                 <br><br>
               <h6 class=" light-text-color" translate="pricing.features.clubSmall"></h6>
                 <br><br>    
-                <a href="/#/signupStartTeam/TEAMS" translate="commons.buttons.subscribe"
+                <a href="/#/signup/club" translate="commons.buttons.subscribe"
                     class="btn waves-effect waves-white dark-primary-color">
                 </a>
                 <br><br>
             </div>
             <div class="card-action">
-              <a href="/#/signupStartTeam/TEAMS" translate="commons.buttons.subscribe"
+              <a href="/#/signup/club" translate="commons.buttons.subscribe"
                     class="btn waves-effect waves-white dark-primary-color">
                 </a>
             </div>
         </div>
         
-        <div class="card col s12 m3">
+        <div class="card col s12 m6 l3">
             <div class="card-title secondary-color center-align">
                 <i class="fa fa-fw fa-user-times fa-2x white-text" style="padding:2px;"></i>&nbsp;
                 <h5 translate="pricing.titleClubMediumPlan"></h5>
             </div>
             <div class="card-title white dark-text-color" style="height:200px;">
                 <span class="light-text-color activator">{{'pricing.conditionClubMediumPlan' | translate}}<i class="material-icons right">help</i></span>
-                <h3  translate="pricing.priceClubMediumPlanM"></h3>
+                <h4 translate="pricing.priceClubMediumPlanM"></h4>
                 <h5 class="right" translate="pricing.priceClubMediumPlanA"></h5>
             </div>
             <div class="card-reveal left-align">
@@ -93,14 +93,14 @@
             </div>
         </div>
         
-        <div class="card col s12 m3">
+        <div class="card col s12 m6 l3">
             <div class="card-title accent-color center-align">
                 <i class="fa fa-fw fa-users fa-2x white-text" style="padding:2px;"></i>&nbsp;
                 <h5 translate="pricing.titleClubLargePlan"></h5>
             </div>
             <div class="card-title white dark-text-color" style="height:200px;">
                 <span class="light-text-color activator">{{'pricing.conditionClubLargePlan' | translate}}<i class="material-icons right">help</i></span>
-                <h3 translate="pricing.priceClubLargePlanM"></h3>
+                <h4 translate="pricing.priceClubLargePlanM"></h4>
                 <h5 class="right" translate="pricing.priceClubLargePlanA"></h5>
             </div>
             <div class="card-reveal left-align">
