--- a/src/app/modules/commons/users/signup/signupUser.html
+++ b/src/app/modules/commons/users/signup/signupUser.html
@@ -4,8 +4,8 @@
     <div class="row">
         <div class="col s12 accent-text-color center">
             <h4 translate="signupStartPage.form.title"></h4>
-            <h3 ng-if="single"><span class="fa fa-fw fa-user"></span> Offre individuelle</h3>
-            <h3 ng-if="!single"><span class="fa fa-fw fa-users"></span> Offre collective</h3>
+            <h3 ng-if="single"><span class="fa fa-fw fa-user"></span> Offre Individuelle</h3>
+            <h3 ng-if="!single"><span class="fa fa-fw fa-users"></span> Offre Club</h3>
         </div>
     </div>
 
