--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -1,4 +1,7 @@
-<div class="container">
+<div class="container" ng-intro-options="IntroOptions" ng-intro-method="CallMe"
+     ng-intro-oncomplete="CompletedEvent" ng-intro-onexit="ExitEvent"
+     ng-intro-onchange="ChangeEvent" ng-intro-onbeforechange="BeforeChangeEvent"
+     ng-intro-autostart="true">
 <!-- body start-->
     <div class="row"><div class="col s12">&nbsp;</div></div>
     
@@ -6,11 +9,12 @@
        
     
     <div class="row">
-        <div class="col s12 l4">
+        
+        <div class="col s12 l4" id=step2>
             <widget-notifications meta="meta" user="user" ></widget-notifications>
         </div>
         
-        <div class="col s12 l4">
+        <div class="col s12 l4" id=step3>
             <widget-calendar meta="meta" user="user" ></widget-calendar>
         </div>
         
