--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -53,7 +53,7 @@
                                 <label for="email">{{'profilePage.form.label.email' | translate }} <span
                                         class="accent-text-color">*</span></label>
                                 <input type="email" id="email" name="email"
-                                       ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
+                                       ng-pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
                                        class="validate"
                                        required ng-model="user.contact.email"
                                        ng-class="{ 'invalid': profileForm.email.$invalid }"/>
@@ -129,7 +129,7 @@
                                 <label for="email"> {{'profilePage.form.label.email' | translate }} <span
                                         class="accent-text-color">*</span></label>
                                 <input type="email" id="email" name="email"
-                                       ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
+                                       ng-pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
                                        class="validate"
                                        required ng-model="user.contact.email"
                                        ng-class="{ 'invalid': profileForm.email.$invalid }"/>
