--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -16,6 +16,7 @@
                 <div class="col m2 center-align" translate="billingPage.label.billingnumber"></div>
                 <div class="col m2 center-align" translate="billingPage.label.billingdate"></div>
                 <div class="col m2 center-align" translate="billingPage.label.pay.cardNumber"></div>
+                <div class="col m2 center-align"></div>
             </div>
             <div ng-repeat="plan in user.account.listPlan track by $index" class="row light-primary-color">
                 <div class="col m2 center-align">
@@ -24,17 +25,19 @@
                 <div class="col m2 center-align accent-text-color">
                     <h6>{{plan.levelPlan}}<br/>
                         <span ng-if="plan.inTrial">
-                        <small translate="{{'billingPage.label.status.' + plan.status}}"
-                               translate-values="{value: plan.formatedEndTrialDate}"></small>
+                            <small translate="{{'billingPage.label.status.' + plan.status}}"
+                                   translate-values="{value: plan.formatedEndTrialDate}"></small>
                         </span>
-                        <span ng-if="!plan.inTrial" translate="billingPage.label.trialEnded"></span>
+                        <div ng-if="plan.status === 'open'">
+                            <span ng-if="!plan.inTrial" translate="billingPage.label.trialEnded"></span>
+                        </div>
                     </h6>
                 </div>
 
                 <div ng-if="plan.status === 'open' || plan.status === 'canceled'" class="col m8 center-align">
-                    <a href="#/private/billing/pay/{{$index}}" class="btn waves-effect waves-white secondary-color"
-                       translate="billingPage.label.pay.title">
-                    </a>
+                    <button ng-click="pay($index)"
+                            class="btn waves-effect waves-white secondary-color pull-right"
+                            translate="billingPage.label.pay.title"></button>
                 </div>
                 <div ng-if="plan.status !== 'canceled' && plan.status !== 'open'">
                     <div class="col m1 center-align"><span
@@ -43,12 +46,19 @@
                     <div class="col m2 center-align">
                         <small ng-bind="plan.paymentId"></small>
                     </div>
-                    <div class="col m2 center-align"
-                         ng-if="plan.status!=='trialing' && plan.status!=='canceled'">
+                    <div class="col m2 center-align" ng-if="plan.status==='active'">
                         {{plan.paidDate | date}}
                     </div>
-                    <div class="col m2 center-align" ng-if="plan.status==='canceled'"></div>
-                    <div ng-bind="'xxxx xxxx xxxx ' + plan.cardInfo.last4" class="col m2 center-align"></div>
+                    <div class="col m2 center-align" ng-if="plan.status === 'canceled'"></div>
+                    <div class="col m2 center-align"><span ng-bind="'xxxx xxxx xxxx ' + plan.cardInfo.last4"></span>
+                        <button ng-click="unsubscribe($index)"
+                                class="btn waves-effect waves-white secondary-color pull-right">
+                            <div class="progress" ng-if="inProgress">
+                                <div class="indeterminate"></div>
+                            </div>
+                            {{'billingPage.label.pay.unsubscribe' | translate}}
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -63,7 +73,9 @@
                     <span ng-if="plan.inTrial">
                     <small translate="{{'billingPage.label.status.' + plan.status}}"
                            translate-values="{value: plan.formatedEndTrialDate}"></small></span>
-                    <span ng-if="!plan.inTrial" translate="billingPage.label.trialEnded"></span>
+                    <div ng-if="plan.status === 'open'">
+                        <span ng-if="!plan.inTrial" translate="billingPage.label.trialEnded"></span>
+                    </div>
                 </h6>
                 <div ng-if="plan.status === 'open' || plan.status === 'canceled'" class="col s12">
                     <a href="#/private/billing/pay/{{$index}}" class="btn waves-effect waves-white secondary-color"
@@ -73,7 +85,16 @@
                 <span ng-if="plan.status !== 'open' && plan.status !== 'canceled'">
                         <div class="col s2 center-align"><span ng-bind="plan.amountPaid"></span> €</div>
                         <div class="col s4 center-align" ng-if="plan.status!=='trialing' && plan.status!=='canceled'">{{plan.paidDate | date}}</div>
-                        <div ng-bind="'xxxx xxxx xxxx ' + plan.cardInfo.last4" class="col s6 center-align"></div>
+                    <div>
+                        <span ng-bind="'xxxx xxxx xxxx ' + plan.cardInfo.last4" class="col s6 center-align"></span>
+                        <button ng-click="unsubscribe($index)"
+                            class="btn waves-effect waves-white secondary-color pull-right">
+                            <div class="progress" ng-if="inProgress">
+                                <div class="indeterminate"></div>
+                            </div>
+                            {{'billingPage.label.pay.unsubscribe' | translate}}
+                        </button>
+                    </div>
                     <div class="col s6 center-align" ng-if="plan.status==='canceled'"></div>
                     <div class="col s6 center-align" ng-if="plan.status==='trialing'"
                          translate="billingPage.label.trial"></div>
