--- a/src/app/modules/commons/users/signup/signupDone.html
+++ b/src/app/modules/commons/users/signup/signupDone.html
@@ -7,18 +7,19 @@
             <div class="row">
                 <div class="col s12">
                     <div class="center icon-block">
-                         <div class="accent-text-color">
-                             <i class="medium material-icons">verified_user</i>
+                        <div class="accent-text-color">
+                             <i class="medium material-icons md-60">verified_user</i>
                          </div>
-                        <h4 class="center" translate="signupStartDonePage.title"></h4>
+                    
+                        <h4 class="center light-text-color" translate="signupStartDonePage.title"></h4>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col s12">
-                <span style="font-size:1.3em">{{'signupStartDonePage.line1' | translate}}<br>
+                <div class="col s12 center">
+                <span style="font-size:1.4em" class="accent-text-color">{{'signupStartDonePage.line1' | translate}}<br>
                 {{'signupStartDonePage.line2' | translate}}<br>
-                {{'signupStartDonePage.line3' | translate}}<br>
+                
                 </span>
                 </div>
             </div>
@@ -27,30 +28,14 @@
                 	<span class="right">{{'signupStartDonePage.signature' | translate }}</span>
                 </div>
             </div>
-            <div class="row">
-                <div class="center col s12">
-                <a href="" class="btn white-text accent-color" ng-click="goHome()">{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
-                </div>
-            </div>
+            
         </div>
     </div>
 </div>
 
 <div class="secondary-color">
     <div class="section white-text">
-
-
         <h5 class="center-align" translate="landing.area-4.content"></h5>
-
-        <div class="row">
-            <!-- 
-            <span class="col m2 hide-on-small-only">&nbsp;</span>
-            <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
-            -->
-            <span class="col m5 hide-on-small-only">&nbsp;</span>
-            <img class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
-            <span class="col m5 hide-on-small-only">&nbsp;</span>
-        </div>
     </div>
 </div>
    
