--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -18,7 +18,7 @@
             <widget-calendar meta="meta" user="user" ></widget-calendar>
         </div>
         
-        <div class="col s12 l4">
+        <div class="col s12 l4" id=step4>
             <widget-collecte meta="meta" user="user" ></widget-collecte>
         </div>
         
