--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -54,13 +54,13 @@
                 <br><br>
               <h6 class=" light-text-color" translate="pricing.features.clubSmall"></h6>
                 <br><br>    
-                <a href="/#/signup/club" translate="commons.buttons.subscribe"
+                <a href="/#/signupStartTeam/TEAMS" translate="commons.buttons.subscribe"
                     class="btn waves-effect waves-white dark-primary-color">
                 </a>
                 <br><br>
             </div>
             <div class="card-action">
-              <a href="/#/signup/club" translate="commons.buttons.subscribe"
+              <a href="/#/signupStartTeam/TEAMS" translate="commons.buttons.subscribe"
                     class="btn waves-effect waves-white dark-primary-color">
                 </a>
             </div>
