Lien choix formule

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -235,7 +235,7 @@
                 <div>
                     <a href="javascript:void(0);" class="light-text-color left" ng-click="openForgotPwd()"
                        translate="modal.login.label.forgotpasswd"></a>
-                    <a href="javascript:void(0);" class="secondary-text-color right" ng-click="openSignup()"
+                    <a href="/#/pricing" class="secondary-text-color right modal-close"
                        translate="navbar.signup"></a>
                 </div>
 
