--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -1,7 +1,7 @@
-<div class="container" ng-intro-options="IntroOptions" ng-intro-method="CallMe"
+<div class="container" ng-intro-options="IntroOptions" ng-intro-method="callMe"
      ng-intro-oncomplete="CompletedEvent" ng-intro-onexit="ExitEvent"
      ng-intro-onchange="ChangeEvent" ng-intro-onbeforechange="BeforeChangeEvent"
-     ng-intro-autostart="true">
+     ng-intro-autostart="launchIntoJs()">
 <!-- body start-->
     <div class="row"><div class="col s12">&nbsp;</div></div>
     
